--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,11 @@ jobs:
         run: make gen-docs
       - name: Verify Changed files
         uses: tj-actions/verify-changed-files@v11.1
+      - name: Fail if files changed
+        if: steps.verify-changed-files.outputs.files_changed == 'true'
+        run: |
+          echo "Please run make gen-docs"
+          exit 1
   
   acctest:
     runs-on: ubuntu-20.04
