--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         run: make gen-docs
       - name: Verify Changed files
         uses: tj-actions/verify-changed-files@v11.1
+        id: verify-changed-files
       - name: Fail if files changed
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
