--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           echo "Changed files: ${{ steps.verify-changed-files.outputs.changed_files }}"
-          echo "Please run make gen-docs"
+          cat docs/index.md
+          echo "Please run go generate"
           exit 1
   
   acctest:
