--- a/.github/workflows/upload-assets.yml
+++ b/.github/workflows/upload-assets.yml
@@ -16,8 +16,7 @@ jobs:
         uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl private --exclude '.git/*'
-          src: ./
-          dest: s3://port-tf-provider-assets/
         env:
+          AWS_S3_BUCKET: s3://port-tf-provider-assets/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
