--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-@talsabagport @danielsinai @dvirsegev @matarpeles @pazhersh @MPTG94
+@talsabagport @danielsinai @dvirsegev @matarpeles @pazhersh @MPTG94 @erikzaadi
