--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -29,6 +29,6 @@ jobs:
           if [[ -n "${DOCS_CHANGES}" ]]; then
             echo "Error: Documentation is out of sync with schema. Please run 'make gen-docs' locally and commit the changes."
             echo "Changes detected in docs folder:"
-            echo "$DOCS_CHANGES"
+            echo "${DOCS_CHANGES}"
             exit 1
           fi 
