--- a/.github/workflows/ci-v2.yml
+++ b/.github/workflows/ci-v2.yml
@@ -53,7 +53,8 @@ jobs:
             go test "$package" -c -o "$file"
             files+="\"$file\""
           done
-          out="[$(printf ",%s" "${files[@]}")]"
+          joined_files=$(printf ",%s" "${files[@]}")
+          out="[${joined_files:1}]"
           echo "test_files=$out"
           echo "test_files=$out" >> "$GITHUB_OUTPUT"
       - uses: actions/upload-artifact@v4
