--- a/.github/workflows/ci-v2.yml
+++ b/.github/workflows/ci-v2.yml
@@ -90,4 +90,7 @@ jobs:
           PORT_CLIENT_ID: ${{ secrets.PORT_CLIENT_ID }}
           PORT_CLIENT_SECRET: ${{ secrets.PORT_CLIENT_SECRET }}
           PORT_BASE_URL: ${{ secrets.PORT_BASE_URL }}
-        run: ${{matrix.test_file}} -test.timeout 40m -test.p 1
+        run: |
+          ls -la || true
+          ls -la test-files || true
+          ./${{matrix.test_file}} -test.timeout 40m -test.p 1
