replace `github_output.write` with print(..., file=github_output)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,8 @@ jobs:
               include.append(dict(test_file=file, package=package))
             json_files = json.dumps(files)
             with open(os.environ['GITHUB_OUTPUT'], 'a') as github_output:
-              github_output.write(f'test_files=' + json.dumps(files))
-              github_output.write(f'test_files_include=' + json.dumps(include))
+              print(f'test_files=' + json.dumps(files), file=github_output)
+              print(f'test_files_include=' + json.dumps(include), file=github_output)
 
       - uses: actions/upload-artifact@v4
         with:
