--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,11 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_wrapper: false
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: Install gotestsum
+        run: go install gotest.tools/gotestsum@latest
       - uses: actions/download-artifact@v4
         with:
           name: test-files
@@ -99,7 +104,17 @@ jobs:
           PORT_CLIENT_SECRET: ${{ secrets.PORT_CLIENT_SECRET }}
           PORT_BASE_URL: ${{ secrets.PORT_BASE_URL }}
         run: |
-          chmod u+x ${{matrix.test_file}}
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          ./${{matrix.test_file}} -test.timeout 10m -test.parallel 1 -test.shuffle ${{ github.run_id }} -test.v >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+          chmod u+x "${{matrix.test_file}}"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+          gotestsum --raw-command --junitfile ./test-results/junit.xml -- go tool test2json -t -p "${{matrix.package}}" "${{matrix.test_file}}" \
+            -test.v=test2json -test.timeout 10m -test.parallel 1 -test.shuffle "${{ github.run_id }}" >> "$GITHUB_STEP_SUMMARY"
+          echo '```' >> "$GITHUB_STEP_SUMMARY"
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
+        if: ${{ always() }}
+        with:
+          report_paths: './test-results/junit.xml'
+          include_passed: true
+          require_tests: true
+          fail_on_failure: true
