--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,6 @@ env:
   GO_VERSION: "1.22"
   FORCE_COLOR: 1
 
-  # See: https://github.com/actions/setup-go/issues/424#issuecomment-2044454425
-  GOTOOLCHAIN: local
-
 jobs:
   lint:
     name: lint
@@ -37,6 +34,11 @@ jobs:
       test_files_include: ${{steps.compile-tests.outputs.test_files_include}}
     steps:
       - uses: actions/checkout@v4
+      - name: Configure env for toolchain ignore
+        shell: bash
+        run: |
+          # See: https://github.com/actions/setup-go/issues/424#issuecomment-2044454425
+          echo "GOTOOLCHAIN=local" >> "$GITHUB_ENV"
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
