--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
           if-no-files-found: error
 
   acctest:
-    name: Acceptance Test - ${{matrix.package_short}}
+    name: Test ${{matrix.package_short}}
     needs: acctest-build
     concurrency:
       group: acctest
@@ -102,7 +102,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: test-files
-      - name: Run tests - ${{matrix.package_short}}
+      - name: Test ${{ matrix.package }}
         env:
           TF_ACC: 1
           CI_USER_NAME: ${{ secrets.CI_USER_NAME }}
